// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress renders correctly 1`] = `
<div
  class="za-progress theme-primary shape-line"
>
  <div
    class="za-progress-inner"
    style="height:5px;"
  >
    <div
      class="za-progress-bg"
      style="width:10%;"
    />
  </div>
</div>
`;

exports[`Progress renders has children correctly 1`] = `
<div
  class="za-progress theme-primary shape-line"
>
  <div
    class="za-progress-inner"
    style="height:5px;"
  >
    <div
      class="za-progress-bg"
      style="width:10%;"
    />
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;

exports[`Progress renders shape is circle correctly 1`] = `
<div
  class="za-progress theme-primary shape-circle"
>
  <div
    class="za-progress-inner"
  >
    <svg
      class="za-spinner theme-primary"
      viewbox="0 0 62 62"
    >
      <circle
        class="za-spinner-path"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-width:5;"
      />
      <circle
        class="za-spinner-line"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-dasharray:17.90707812546182 179.0707812546182;stroke-width:5;"
      />
    </svg>
  </div>
  <div
    class="za-progress-text"
  >
    foo
  </div>
</div>
`;
